# GHPitchDetection

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  config.toml
tools/FretNetRust/fretnet_runtime/: Cargo.toml  README.md
tools/FretNetRust/fretnet_runtime/assets/test_features/: 00_BN1-129-Eb_comp_mic_f130.json  00_BN1-129-Eb_comp_mic_f130.npz  00_Jazz1-130-D_comp_mic_f130.json  00_Jazz1-130-D_comp_mic_f130.npz
tools/FretNetRust/fretnet_runtime/assets/test_features_python/: 00_BN1-129-Eb_comp_mic_features_f130.json  00_BN1-129-Eb_comp_mic_features_f130.npz  (+2 more)
tools/FretNetRust/fretnet_runtime/examples/: benchmark_end_to_end.rs  benchmark_frontend_profile.rs  benchmark_inference.rs  benchmark_streaming.rs  extract_features.rs  inspect_model.rs  run_end_to_end.rs  run_end_to_end_batch_dump.rs  run_end_to_end_dump.rs  run_inference.rs  sweep_streaming.rs
tools/FretNetRust/fretnet_runtime/output/: python_debug_real.json
tools/FretNetRust/fretnet_runtime/src/: audio.rs  benchmark.rs  config.rs  error.rs  fixture.rs  frontend.rs  hcqt.rs  inference.rs  lib.rs  model.rs  postprocess.rs  profile.rs  streaming.rs  types.rs
tools/FretNetRust/fretnet_runtime/tests/: end_to_end_frontend_test.rs  feature_equivalence_test.rs  regression_test.rs  shape_test.rs  smoke_test.rs  stage_equivalence_test.rs
tools/FretNetRust/fretnet_runtime/tools/: benchmark_against_guitarset.py  benchmark_python_vs_rust.py  generate_feature_fixture.py  generate_reference_fixture.py  generate_stage_fixtures.py  inspect_feature_fixture.py  inspect_stage_fixture.py  run_python_reference.py
(+39 files in other folders)
